AB#2254 program-people-affected > review-inclusion

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -150,7 +150,9 @@
           "vulnerability-assessment-validated": "Validated Vulnerability Assessment",
           "final-score": "Validated inclusion score",
           "temp-score": "Temporary inclusion score",
-          "included": "Included"
+          "included": "Included",
+          "name": "Name",
+          "dob": "Date of birth"
         },
         "status": {
           "created": "Created",
