AB#2255 program-people-affected in payment-page

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -152,7 +152,8 @@
           "temp-score": "Temporary inclusion score",
           "included": "Included",
           "name": "Name",
-          "dob": "Date of birth"
+          "dob": "Date of birth",
+          "payment": "Payment #"
         },
         "status": {
           "created": "Created",
