AB#2274 Add/copy QrScannerComponent to AW-App

--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -70,6 +70,15 @@
   "connection": {
     "error-retry": "Something went wrong, do you want to try again?"
   },
+  "qr-scanner": {
+    "title": "Scan QR-code",
+    "error-not-compatible": "Your device is not able to scan",
+    "error-no-permissions": "Please allow the camera to be used or check if its not already in use and try again.",
+    "error-generic": "Something went wrong.",
+    "switch-camera": "Switch camera",
+    "try-again": "Try again",
+    "toggle-flash": "Toggle flash-light"
+  },
   "shared": {
     "submit-button": "Submit"
   }
