--- a/interfaces/AW-App/src/assets/i18n/en.json
+++ b/interfaces/AW-App/src/assets/i18n/en.json
@@ -27,7 +27,7 @@
       "introduction": "The following actions are available. Please select one.",
       "download-data": "Download validation data",
       "view-appointments": "View appointments",
-      "scan-qr": "Scan PA's QR-code",
+      "scan-qr": "Scan Person Affected's QR-code",
       "upload-data": "Upload validation data"
     },
     "download-data": {
@@ -44,7 +44,7 @@
       "main-menu": "Finished. Back to main menu."
     },
     "scan-qr": {
-      "introduction": "Scan QR-code to retrieve PA's information.",
+      "introduction": "Scan QR-code to retrieve Person Affected's information.",
       "scan-button": "Scan QR-code",
       "error": "The scanned QR-code did not contain a DID or program-ID.",
       "unknownDidCombination": "QR-code not found. You can try scanning another QR-code.",
@@ -58,22 +58,22 @@
       "upload-aborted": "No validation data could be uploaded at this time. Please try again later."
     },
     "validate-program": {
-      "introduction": "Below you see the PA's information for the specific program. Check it with the PA, adapt where necessary, and confirm.",
+      "introduction": "Below you see the Person Affected's information for the specific program. Check it with the Person Affected, adapt where necessary, and confirm.",
       "submit": "Confirm",
       "dob-feedback": "The date of birth does not have a valid format. Please adjust and save again.",
-      "please-confirm": "Below is an overview of the PA's information. Please confirm.",
+      "please-confirm": "Below is an overview of the Person Affected's information. Please confirm.",
       "change": "Change information",
       "confirm-button": "Save",
       "conclusion": "The validation data has been saved. Please make sure to upload it (now or when internet is available)."
     },
     "validate-fsp": {
-      "introduction": "Below you see the PA's information for the specific program. Check it with the PA, adapt where necessary, and confirm.",
+      "introduction": "Below you see the Person Affected's information for the chosen Financial Service Provider. Check it with the Person Affected, adapt where necessary, and confirm.",
       "submit": "Submit answers",
       "dob-feedback": "The date of birth does not have a valid format. Please adjust and save again.",
-      "please-confirm": "Below is an overview of the PA's information. Please confirm and submit.",
+      "please-confirm": "Below is an overview of the Person Affected's information. Please confirm and submit.",
       "change": "Change information",
       "confirm-button": "Issue Program Credential",
-      "no-fsp": "There are no FSP to validate",
+      "no-fsp": "There are no questions to validate for the chosen Financial Service Provider",
       "back-menu": "Back to main menu",
       "conclusion": "The financial service provider data has been saved. Please make sure to upload it (now or when internet is available)."
     }
@@ -93,6 +93,6 @@
   "shared": {
     "submit-button": "Submit",
     "validate-generic-error": "We cannot process some of your input. Please check and update one of your answers.",
-    "validate-phoneNumber": "We couldn't verify that phone-number. Please update and try again."
+    "validate-phone-number": "We couldn't verify that phone-number. Please update and try again."
   }
 }
