AB#2313 export select-for-validation list

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -210,6 +210,10 @@
         "included": {
           "btn-text": "Export inclusion list",
           "confirm-message": "This will download a CSV-file with all included People Affected, to be used for a Community Review."
+        },
+        "selected-for-validation": {
+          "btn-text": "Export list: selected for validation",
+          "confirm-message": "This will download a CSV-file with all People Affected selected for validation, to be used for Validation visits."
         }
       },
       "manage-aidworkers": {
