--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -132,8 +132,7 @@
         "total-included": "Number of PA included",
         "total-amount": "Total amount to payout:",
         "payout-success": "Payout successful.",
-        "none-included": "No included people yet.",
-        "export-list": "Export list"
+        "none-included": "No included people yet."
       },
       "program-people-affected": {
         "section-title": "Manage People Affected",
@@ -214,6 +213,10 @@
         "selected-for-validation": {
           "btn-text": "Export list: selected for validation",
           "confirm-message": "This will download a CSV-file with all People Affected selected for validation, to be used for Validation visits."
+        },
+        "payment": {
+          "btn-text": "Export list",
+          "confirm-message": "This will download a CSV-file with all People Affected included in this payment, to be shared with institutions requiring this data."
         }
       },
       "manage-aidworkers": {
