--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -206,6 +206,7 @@
         "pageTitle": "Program JSON"
       },
       "export-list": {
+        "no-data": "There are currently no People Affected to download",
         "included": {
           "btn-text": "Export inclusion list",
           "confirm-message": "This will download a CSV-file with all included People Affected, to be used for a Community Review."
