--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -75,18 +75,12 @@
       "supply-password": "Your password:",
       "supply-username": "Your username:"
     },
-    "meeting-reminder": {
-      "at": "At",
-      "documents": "Make sure to bring these documents:",
-      "from": "From",
+    "registration-summary": {
+      "introduction": "Thank you. An aidworker of the NGO will organize a meeting with you to validate your information, probably by visiting your home.",
+      "documents": "Make sure to have these documents ready:",
       "info-message": "To activate your Digital ID<br> <br> When you create your Digital ID you will receive a print out of your digital ID that looks like this.<br> You will need to bring this and the following physical documents below to a meeting with an Aid worker to Activate your Digital ID.<br> <ul> <li>Your National Identity Card</li> </ul><br> What if I don’t have a card? Then you have 2 options: <ol> <li>Bring a letter from the chief that confirms his/her identity</li> <li>Bring your X number (need the name of this number like BSN number) from the National Bureau of Registration. You will have to pay for a new one the price will be X.</li> </ol>",
-      "meeting-count-down": "Your meeting appointment takes place in {{daysToMeeting}} days.",
-      "meeting-reminder": "Thank you. Here is everything you need to know about your meeting:",
-      "meeting-today": "Your meeting appointment takes place today.",
-      "meeting-tomorrow": "Your meeting appointment takes place tomorrow.",
       "more-info-documents": "About these documents",
-      "qr-code": "Please show this QR-code at your meeting.",
-      "till": "Till"
+      "qr-code": "Please show this QR-code to the aidworker when asked."
     },
     "preprinted-qrcode": {
       "introduction": "Do you have a pre-printed QR-code?",
@@ -96,18 +90,6 @@
       "try-again": "Try again",
       "error": "The code you scanned cannot be used, please try another one.",
       "result-ok": "The QR-code you scanned is now connected to your account."
-    },
-    "select-appointment": {
-      "at": "At",
-      "change": "Change my option",
-      "conclusion": "Thank you. Your appointment for Digital ID activation and program application is confirmed.",
-      "confirm": "Confirm my option",
-      "from": "From",
-      "info-message": "To activate your Digital ID<br> <br> When you create your Digital ID you will receive a print out of your digital ID that looks like this.<br> You will need to bring this and the following physical documents below to a meeting with an Aid worker to Activate your Digital ID.<br> <ul> <li>Your National Identity Card</li> </ul>",
-      "introduction": "Next step: select your option for Digital ID activation and program application.",
-      "more-info-activation": "About activation",
-      "thanks-repeat": "You have selected the following option:",
-      "till": "Till"
     },
     "select-country": {
       "conclusion": "Thank you, you have selected {{country}}.",
