--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -150,6 +150,7 @@
           "final-score": "Validated inclusion score",
           "temp-score": "Temporary inclusion score",
           "included": "Included",
+          "rejected": "Rejected",
           "name": "Name",
           "dob": "Date of birth",
           "payment": "Payment #"
