AB#2670 Add phoneNumber-column to People-table

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -153,6 +153,7 @@
           "rejected": "Rejected",
           "name": "Name",
           "dob": "Date of birth",
+          "phone-number": "Phonenumber",
           "payment": "Payment #"
         },
         "status": {
