--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -176,6 +176,12 @@
       "program-modal": {
         "pageTitle": "Program JSON"
       },
+      "notification": {
+        "include": {
+          "btn-text": "Notify included people affected",
+          "confirm-message": "This will send an SMS and a voice call to all currently included people affected. Please make sure you are finished with the review process, to avoid possible confusion for people affected."
+        }
+      },
       "export-list": {
         "no-data": "There are currently no People Affected to download",
         "included": {
