AB#2689 Add validation+message for number-only-input

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -172,6 +172,7 @@
   },
   "validation": {
     "generic-error": "We cannot process some of your input. Please check and update one of your answers.",
+    "number": "The answer needs to be a number.",
     "phoneNumber": "We couldn't verify that phone-number. Please update and try again."
   }
 }
