AB#2794 Adjust error-message to be more generic
Related AB#1519

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -154,7 +154,7 @@
   },
   "q-and-a-set": {
     "validation": {
-      "generic-error": "We cannot process some of your input. Please check and update one of your answers.",
+      "generic-error": "We cannot process some of your input. Please check and update your answers.",
       "required": "An answer is required for this question. Please adjust and try again.",
       "number": "The answer needs to be a number. Please adjust and try again.",
       "date": "The date does not have a valid format. Please adjust and try again.",
