--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -168,7 +168,8 @@
     "error-generic": "Something went wrong.",
     "switch-camera": "Switch camera",
     "try-again": "Try again",
-    "toggle-flash": "Toggle flash-light"
+    "toggle-flash": "Toggle flash-light",
+    "close": "Close"
   },
   "shared": {
     "cancel-button": "Cancel",
