Cleanup names/types + add missing translation-label

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -121,7 +121,8 @@
         "updated": "Program last updated at",
         "customCriteria": "Inclusion criteria",
         "aidworkers": "Assigned aidworkers",
-        "financialServiceProviders": "Financial Service-providers"
+        "financialServiceProviders": "Financial Service-providers",
+        "protectionServiceProviders": "Protection Service-providers"
       },
       "program-payout": {
         "section-title": "Manage Payments",
