--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -32,28 +32,27 @@
       "confirm-password": "Confirm my password:",
       "create-password": "Create my password",
       "create-password-explanation": "Enter a password of at least {{minimalLength}} characters:",
-      "create-username": "Create username:",
-      "info-message": "The following two parts of your information is used to create a digital ID.<br><br>1. Your username (which you will create below)<br>2. Your Password (which must consists of 4 digits/numbers)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
+      "create-username": "Enter first and second name:",
+      "info-message": "The following two parts of your information is used to create a digital ID.<br><br>1. Your name (which you will create below)<br>2. Your Password (which must consists of 4 digits/numbers)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
       "info-message-password": "Lorem ipsem bladibla",
-      "info-message-username-pw": "To create a Digital Identity you need to create the following <br><br>3. Your username (which you can create by following this video advise)<br>4. Your Password (which you can create by following this video advise)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
+      "info-message-username-pw": "To create a Digital Identity you need to create the following <br><br>3. Your name<br>4. Your Password<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
       "introduction": "To create a Digital ID you need to complete the following steps.",
       "more-info-digital-id": "About Digital ID",
       "more-info-password": "About passwords",
-      "more-info-username-pw": "About usernames and passwords",
+      "more-info-username-pw": "About names and password",
       "password-only": "Create my password",
       "password-too-short": "Please enter at least {{minimalLength}} characters.",
       "submit-password": "Create my password",
-      "submit-username": "Create my username",
+      "submit-username": "Submit name",
       "unequal-passwords": "The passwords you created are not the same. Please try again.",
       "username-not-unique": "The username you created is not unique. Please try again.",
-      "username-password": "Create your username and a password."
+      "username-password": "Enter your name and create a password."
     },
     "enroll-in-program": {
       "change": "Change my information",
       "info-message": "With 121 we will ask you to create and fill in certain information about yourself.<br>Below describes who sees what when.<br><br>When using 121 you may share the following information below in different ways:<br><ol><li>Your name (from physical document)</li><li>Your date of birth (from physical document)</li><li>Your username (create)</li><li>Your password (create)</li><li>Your selection of a program </li><li>Your answers to the questionnaire (per program) (incl name & DOB pilot)</li><li>Your selection of a potential Financial service provider</li><li>Your Bank Account Number</li><li>Your Telephone Number</li></ol>",
       "info-message-share": "With 121 we will ask you to create and fill in certain information about yourself.<br> Below describes who sees what when.<br> <br> When using 121 you may share the following information below in different ways:<br> <ol> <li>Your name (from physical document)</li> <li>Your date of birth (from physical document)</li> <li>Your username (create)</li> <li>Your password (create)</li> <li>Your selection of a program </li> <li>Your answers to the questionnaire (per program) (incl name & DOB pilot)</li> <li>Your selection of a potential Financial service provider</li> <li>Your Bank Account Number</li> <li>Your Telephone Number</li> </ol> <br> REGISTRATION & DIGITAL ID CREATION:<br> <br> Who will see and when/how will they see it?<br> <ul> <li>You: when filling in 3/4 in to create or log in to your 121 Digital ID.</li> <li>Aid worker Registration: who can see your screen when helping you filling in 3/4 to create/log in to your 121 account</li> <li>Government worker Registration : If your government has requested to attend the registration, they may see you fill in 3/4 on your screen.</li> <li>Aid worker Activation: who sees your physical document when helping you validate with in 1/2/6 to activate your 121 Digital ID</li> <li>Government worker Activation: If your government has requested to attend the activation, they may see your 1/2/6 on the aid workers screen or on your physical document.</li> </ul><br> You can ask the Aid & Government worker to look away when filling in 3/4.<br> <br> when scanned by an aid worker it will produce 3/4 on their screen.<br> <br> VALIDATION & DIGITAL ID ACTIVATION:<br> <br> Who will see and when/how will they see it?<br> <ul> <li>Aid worker: who will scan your digital id QR code will be able to see 1/2/4 briefly when validating your digital id, (once complete the aid worker will no longer be able to see 1/2/4)</li> <li>Government worker: If your government has requested to attend the registration, they may see the aid worker check 1/2/4 on the aid workers screen.</li> <li>Privacy Officer Aid worker: Who checks the process is fair will be able to access 1/2/3/4/5/6 if it has been created in the system.</li> </ul><br> If included in program:<br> <ul> <li>Your community: if they have collectively decided to share the list of who is included in the program, and you have been included then 1 will appear on that public list.</li> <li>Your government: if they have requested to see the list of who is included in the program, and you have been included then 1 will appear on that public list.</li> <li>Aid worker: who is managing the program will be able to access 4/5/6 but will not see your 1/2 linked to it</li> <li>Privacy Officer Aid worker: Who checks the process is fair will be able to access 1/2/3/4/5/6 at any time.</li> </ul>",
-      "introduction": "Hello this is {{ngo}}. We have received your request to apply for {{programTitle}}.",
-      "introduction-questions": "To make sure you get the best possible help and a fair process, we need some personal information.",
+      "introduction": "Hello this is {{ngo}}. To make sure you get the best possible help and a fair process, we need some personal information.",
       "more-info-questions": "About personal information",
       "more-info-share": "Who sees your information",
       "please-confirm": "Below is an overview of your information. Please check and submit.",
@@ -79,16 +78,20 @@
       "documents": "Make sure to have these documents ready:",
       "info-message": "To activate your Digital ID<br> <br> When you create your Digital ID you will receive a print out of your digital ID that looks like this.<br> You will need to bring this and the following physical documents below to a meeting with an Aid worker to Activate your Digital ID.<br> <ul> <li>Your National Identity Card</li> </ul><br> What if I don’t have a card? Then you have 2 options: <ol> <li>Bring a letter from the chief that confirms his/her identity</li> <li>Bring your X number (need the name of this number like BSN number) from the National Bureau of Registration. You will have to pay for a new one the price will be X.</li> </ol>",
       "more-info-documents": "About these documents",
-      "qr-code": "Please show this QR-code to the aidworker when asked."
+      "qr-code": "Please show this QR-code to the aidworker when asked.",
+      "conclusion": "After your validation meeting your will be informed if you have been included or not within X amount of time."
     },
     "preprinted-qrcode": {
-      "introduction": "Do you have a pre-printed QR-code?",
+      "introduction": "The Aidworker/Volunteer will scan a QR-code to link your information and give it to you. Please keep your physical QR-code safe.",
+      "question": "Does the Aidworker/Volunteer have a pre-printed QR-code to scan?",
+      "more-info-qr": "About QR-codes",
+      "info-qr": "More text to come",
       "yes": "Yes",
       "no": "No",
       "start-scanner": "Start scanner",
       "try-again": "Try again",
-      "error": "The code you scanned cannot be used, please try another one.",
-      "result-ok": "The QR-code you scanned is now connected to your account."
+      "error": "The scanned QR)code cannot be used, please try another one.",
+      "result-ok": "The scanned QR-code is now connected to your Digital ID and personal information. Please keep your physical QR-code safe."
     },
     "select-country": {
       "conclusion": "Thank you, you have selected {{country}}.",
@@ -96,7 +99,7 @@
     },
     "select-fsp": {
       "conclusion": "Thank you. You have selected the option {{name}}.",
-      "introduction": "If you are included in the program, how would you like to receive your money?",
+      "introduction": "Please select how you would like to receive your money, if you are included in the program.",
       "attributes": {
         "error": "Something went wrong, please try again.",
         "introduction": "For this option we also need the following:",
@@ -108,19 +111,24 @@
       "info-message": "With the 121 platform, we aim to make Cash Based Aid safe, fast & fair, to help you if you have been affected by disasters and crises to meet your own needs. 121 will help you<br><ul><li>Create a Digtial ID</li><li>Know which programs are available in your area</li><li>Apply to the programs</li><li>Understand who sees your information</li></ul>",
       "more-info": "About 121",
       "result": "Thank you, you have selected {{language}}.",
+      "intro": "To register for this program, you will need to use 121.",
       "introduction": {
         "en": "Welcome to 121. Please select your language.",
+        "sa_KE": "Samburu intro text: to include",
+        "la2_KE": "Language 2 intro text: to include",
         "ny_MW": "Takulandilani ku 121. Chonde sankhani chiyankhulo chanu.",
         "om_ET": "Baga gara 121'tti nagaan dhuftan. Maaloo qooqa keessan filadhaa."
       },
       "language": {
         "en": "English",
+        "sa_KE": "Samburu",
+        "la2_KE": "Language 2",
         "ny_MW": "Chichewa",
         "om_ET": "Afaan Oromoo"
       }
     },
     "select-program": {
-      "info-message": "How was the Pilot created?<br>This 121 Pilot has been created with the NGO who have worked together with your communities in<br><ul><li>Camp 1</li><li>Camp 2</li><li>Camp 3</li><li>Camp 4</li><li>Camp 5</li><li>Camp 6</li><li>Camp 7</li><li>Camp 8</li></ul><br>Together your community and the NGO decided how to Identify 250 households that are most in need of Cash based Aid. Needs are based on looking at family size and if or your family members are<br><ul><li>Chronically ill</li><li>Disabled</li><li>Pregnant</li><li>Lactating</li><li>Widowed</li></ul><br>If you are included in the program it will mean that you will receive the cash as<br><br><ul><li>unconditional, meaning to receive it you only need to fulfill the criteria of  “most in need”.</li><li>unrestricted, meaning whomever receives it, can spend it in any way they see fit.</li></ul><br>What will the each of the 250 households receive?<br>Together your community and the NGO decided to give <br>XXX given in 1 payment.<br><br>When will the each of the 250 households receive it?<br>Together your community and the NGO decided how to give<br>Payment 1 of 1: XXX on XX-XX-XXXX<br><br>Where will the each of the 250 households get it?<br>Together your community and the NGO decided Identified the following ways<br><ul><li>Bank XXX </ul><br>How does it work?<br>After 121 registration/Digital ID Creation and Registration/Digital ID Activation<br><br><ul><li>An initial list of included will be created.</li><li>This list will be shared within the community leaders</li><li>The existing community leaders will give feedback on the list to the NGO.</li><li>the NGO will take this feedback to create the final list (final decision is by the NGO)</li><li>If you have a phone number you will receive a text message to tell you if you are included</li></ul><br>If you do not have a phone number you will be able to see a list in your community to check if you are included or excluded.",
+      "info-message": "The following text is dummy-text for how this could be written. We need input from you to fill this.<br>-------------------<br>How was the Pilot created?<br>This 121 Pilot has been created with the NGO who have worked together with your communities in<br><ul><li>Camp 1</li><li>Camp 2</li><li>Camp 3</li><li>Camp 4</li><li>Camp 5</li><li>Camp 6</li><li>Camp 7</li><li>Camp 8</li></ul><br>Together your community and the NGO decided how to Identify 250 households that are most in need of Cash based Aid. Needs are based on looking at family size and if or your family members are<br><ul><li>Chronically ill</li><li>Disabled</li><li>Pregnant</li><li>Lactating</li><li>Widowed</li></ul><br>If you are included in the program it will mean that you will receive the cash as<br><br><ul><li>unconditional, meaning to receive it you only need to fulfill the criteria of  “most in need”.</li><li>unrestricted, meaning whomever receives it, can spend it in any way they see fit.</li></ul><br>What will the each of the 250 households receive?<br>Together your community and the NGO decided to give <br>XXX given in 1 payment.<br><br>When will the each of the 250 households receive it?<br>Together your community and the NGO decided how to give<br>Payment 1 of 1: XXX on XX-XX-XXXX<br><br>Where will the each of the 250 households get it?<br>Together your community and the NGO decided Identified the following ways<br><ul><li>Bank XXX </ul><br>How does it work?<br>After 121 registration/Digital ID Creation and Registration/Digital ID Activation<br><br><ul><li>An initial list of included will be created.</li><li>This list will be shared within the community leaders</li><li>The existing community leaders will give feedback on the list to the NGO.</li><li>the NGO will take this feedback to create the final list (final decision is by the NGO)</li><li>If you have a phone number you will receive a text message to tell you if you are included</li></ul><br>If you do not have a phone number you will be able to see a list in your community to check if you are included or excluded.",
       "introduction": "Next step: select your program.",
       "more-info-programs": "About programs",
       "no-published-programs": "There are currently no published programs for this location. Please return here later."
@@ -141,8 +149,8 @@
     },
     "signup-signin": {
       "create-id": "Create a Digital ID",
-      "info-message": "The following two parts of your information is used to create a digital ID.<br><br>1. Your username (which you will create below)<br>2. Your Password (which must consists of 4 digits/numbers)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
-      "introduction": "Please select your digital ID.",
+      "info-message": "The following two parts of your information is used to create a digital ID.<br><br>1. Your name (which you will create below)<br>2. Your Password (which must consists of 4 digits/numbers)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
+      "introduction": "To apply for a program, you need to have a valid Digital ID. Please create your Digital ID or use your existing Digital ID.",
       "login-id": "Use my Digital ID",
       "more-info-digital-id": "About Digital ID"
     },
