--- a/interfaces/Referral-App/src/assets/i18n/en.json
+++ b/interfaces/Referral-App/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "tabs": {
     "user": "Person Affected",
-    "title": "Community Offers"
+    "referral-title": "Community Offers",
+    "referral-help-title": "Ask for Help"
   }
 }
