--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -74,12 +74,12 @@
       "supply-username": "Your username:"
     },
     "registration-summary": {
-      "introduction": "Thank you. An aidworker of the NGO will organize a meeting with you to validate your information, probably by visiting your home.",
+      "validation-conclusion": "Thank you. Your registration is now complete. An aidworker of the NGO will organize a meeting with you to validate your information, probably by visiting your home.",
+      "no-validation-conclusion": "Thank you. Your registration is now complete. You will be informed if you have been included within [X amount of time].",
       "documents": "Make sure to have these documents ready:",
       "info-message": "To activate your Digital ID<br> <br> When you create your Digital ID you will receive a print out of your digital ID that looks like this.<br> You will need to bring this and the following physical documents below to a meeting with an Aid worker to Activate your Digital ID.<br> <ul> <li>Your National Identity Card</li> </ul><br> What if I don’t have a card? Then you have 2 options: <ol> <li>Bring a letter from the chief that confirms his/her identity</li> <li>Bring your X number (need the name of this number like BSN number) from the National Bureau of Registration. You will have to pay for a new one the price will be X.</li> </ol>",
       "more-info-documents": "About these documents",
-      "qr-code": "Please show this QR-code to the aidworker when asked.",
-      "conclusion": "After your validation meeting your will be informed if you have been included or not within X amount of time."
+      "qr-code": "Please show this QR-code to the aidworker when asked."
     },
     "preprinted-qrcode": {
       "introduction": "The Aidworker/Volunteer will scan a QR-code to link your information and give it to you. Please keep your physical QR-code safe.",
