AB#3177 Show contact-details of program (when available)

--- a/interfaces/PA-App/src/assets/i18n/ny_MW.json
+++ b/interfaces/PA-App/src/assets/i18n/ny_MW.json
@@ -42,7 +42,7 @@
     },
     "enroll-in-program": {
       "change": "Sinthani mbiri yanga",
-      "introduction-questions": "Kuti muthandizike bwino komanso kuti mukhale pandondomeko yabwino, tifuna mbiri yanu",
+      "introduction-information": "Kuti muthandizike bwino komanso kuti mukhale pandondomeko yabwino, tifuna mbiri yanu",
       "more-info-questions": "Zinthu zokhudza munthu",
       "more-info-share": "Ndindani amene awone mbiri yanu",
       "please-confirm": "Pansipa pali zinthu zokhuza inu. Onani ndipo mupereke",
