--- a/interfaces/PA-App/src/assets/i18n/om_ET.json
+++ b/interfaces/PA-App/src/assets/i18n/om_ET.json
@@ -44,7 +44,7 @@
     },
     "enroll-in-program": {
       "change": "Odeeffannoo koo jijjiiri",
-      "introduction-questions": "Gargaarsa jira jedhame argachuu keessaniifi adeemsa bilisaa ta'uu isaa mirkaneeffachuuf odeeffannoo dhuunfaa hanga tokko ni barbaadna.",
+      "introduction-information": "Gargaarsa jira jedhame argachuu keessaniifi adeemsa bilisaa ta'uu isaa mirkaneeffachuuf odeeffannoo dhuunfaa hanga tokko ni barbaadna.",
       "more-info-questions": "Waa'ee odeeffannoo dhuunfaa",
       "more-info-share": "Odeeffannoo keessan eenyutu ilaala",
       "please-confirm": "Kan armaan gadii odeeffannoo keessan waliigalaati. Maaloo ilaaluun mirkaneeffadhaa galchaa.",
