AB#3176 Add "contactDetails" as optional program-property

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -102,6 +102,7 @@
         "location": "Location",
         "title": "Title",
         "ngo": "NGO",
+        "contactDetails": "Contact details",
         "startDate": "Start date",
         "endDate": "End date",
         "currency": "Currency",
