AB#1453 Add consent question to create-identity component
Related AB#3189
Related AB#3190
Related AB#3191
Related AB#3192

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -30,13 +30,18 @@
     "create-identity": {
       "conclusion": "Great! You have created a Digital ID.",
       "confirm-password": "Confirm my password:",
+      "consent-agree": "I agree",
+      "consent-disagree": "I disagree",
+      "consent-question": "Do you consent?",
       "create-password-explanation": "Enter a password of at least {{minimalLength}} characters:",
       "create-password": "Create my password",
       "create-username": "Enter first and second name:",
-      "info-message-password": "Lorem ipsem bladibla",
+      "info-message-data-policy": "[about data-policy]",
+      "info-message-password": "[about passwords]",
       "info-message-username-pw": "To create a Digital Identity you need to create the following <br><br>3. Your name<br>4. Your Password<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
       "info-message": "The following two parts of your information is used to create a digital ID.<br><br>1. Your name (which you will create below)<br>2. Your Password (which must consists of 4 digits/numbers)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
       "introduction": "To create a Digital ID you need to complete the following steps.",
+      "more-info-data-policy": "Data policy",
       "more-info-digital-id": "About Digital ID",
       "more-info-password": "About passwords",
       "more-info-username-pw": "About names and password",
