AB#2706 Rename "installment" to "payment"

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -130,7 +130,7 @@
       },
       "program-payout": {
         "section-title": "Manage Payments",
-        "installment-nr": "Installment #",
+        "installment-nr": "Payment #",
         "closed": "Closed",
         "open": "Open",
         "start-payout": "Start payout now",
