--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -118,14 +118,14 @@
       "intro": "To register for this program, you will need to use 121.",
       "introduction": {
         "en": "Welcome to 121. Please select your language.",
-        "sa_KE": "Samburu intro text: to include",
+        "saq_KE": "Samburu intro text: to include",
         "la2_KE": "Language 2 intro text: to include",
         "ny_MW": "Takulandilani ku 121. Chonde sankhani chiyankhulo chanu.",
         "om_ET": "Baga gara 121'tti nagaan dhuftan. Maaloo qooqa keessan filadhaa."
       },
       "language": {
         "en": "English",
-        "sa_KE": "Samburu",
+        "saq_KE": "Samburu",
         "la2_KE": "Language 2",
         "ny_MW": "Chichewa",
         "om_ET": "Afaan Oromoo"
