--- a/interfaces/PA-App/src/assets/i18n/om_ET.json
+++ b/interfaces/PA-App/src/assets/i18n/om_ET.json
@@ -1,8 +1,4 @@
 {
-  "tabs": {
-    "you": "Isini",
-    "community": "Hawaasa"
-  },
   "account": {
     "change-password": "Paaswoordii jijjiiri",
     "delete-account-header": "Adda-baastuu Dijitaalaa keessan haquuf murteessitaniittu taanaan paaswoordii keessan galchaa",
@@ -125,5 +121,9 @@
     "more-info": "Dabalataan dubbisaa...",
     "submit-button": "Galchi"
   },
-  "speak-text": {}
+  "speak-text": {},
+  "tabs": {
+    "community": "Hawaasa",
+    "you": "Isini"
+  }
 }
